# minesolver

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: basic-tests.yml
notes/: approx-probs.xlsm  probs-approx.txt  probs.txt  solver-design.md
python/: gen_probs.py  logic.py  probabilities.py  tests.py  utils.py
tests/: python_test.py
zig/: CHANGELOG.md  README.dev.md  README.md  __init__.py  build.zig  example1.txt  example2.txt  example3.txt  example4-reach24.txt  main.zig  make-wheels  pyproject.toml  setup.py
zig/src/: main.zig
zig/zig_minesolver/: __init__.py
