# BUILD
# =====
[build-system]
# Minimum requirements for the build system to execute.
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 42",
  "wheel",
  # "ziglang == 0.8",
]

[metadata]
name = "zig_minesolver"
version = "0.1.0"
description = "Minesweeper solver in Zig"

[options]
packages = "zig_minesolver"
install_requires = []


# TOOLS
# =====

# BLACK
# -----
[tool.black]
exclude = '''
(
  /(
    | \.git/
    | .*venv.*/
    | __pycache__/
  )
)
'''
include = '\.pyi?$'
line-length = 88
target_version = ['py36']

# ISORT
# -----
[tool.isort]
# Make compatible with Black
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
# Other options
lines_after_imports = 2
order_by_type = true
skip = ""
skip_glob = "*venv*"
